--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Tokarchyk.github.io/BLGroup-14-Project-IceCream",
+  "homepage": "https://Iris2030.github.io/Team-work-1",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /BLGroup-14-Project-IceCream/"
+    "build": "parcel build src/*.html --public-url /Team-work-1/"
   },
   "repository": {
     "type": "git",
